# Blockchain_kursovaya

./: .gitmodules  .travis.yml  CMakeLists.txt  Documentation_for_blockchain_server.docx  README.md
project/: Block.cpp  Block.hpp  Blockchain.cpp  Blockchain.hpp  main.cpp  main_server.cpp  trusted_comp.cpp
project/client/: main_client.cpp
project/server/: main_server.cpp
project/sourses/: Block.cpp  Block.hpp  Blockchain.cpp  Blockchain.hpp  Sha256.cpp  Sha256.hpp  client.hpp  cryptkey.hpp  exceptions.hpp  hugeint.cpp  hugeint.hpp  rsa.cpp  rsa.hpp  trusted_comp.cpp  trusted_comp.hpp
